--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
     <title>Document</title>
 </head>
 <body ng-app="app">
-    <h1>Test 2+5</h1>
-    {{2+5}}
+
+    <ui-view></ui-view>
     
     <script type="text/javascript" src="bundle.js"></script>
 </body>
