--- a/app/home/home.html
+++ b/app/home/home.html
@@ -4,7 +4,7 @@
     <div>
         <div ng-show="tabController.user">
         <div class="list-group">
-            <a href="" class="list-group-item" ng-click="tabController.onUser()"> {{tabController.user}} To Do</a>
+            <a href="" class="list-group-item" ng-click="tabController.onUser()"> {{tabController.user}}'s To Do</a>
             <a href="" class="list-group-item" ng-click="tabController.onAll()"> All</a>
         </div>
     </div>
