--- a/app/home/home.html
+++ b/app/home/home.html
@@ -18,4 +18,7 @@
                 </div>
             </div>
         </div>
+        <li ng-repeat="item in tabController.data">
+            <span>{{item.user}}</span>
+        </li>
 </div>
