--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,9 +2,9 @@
     <user-input></user-input>
     
     <div>
-        <div ng-show="tabController.user">
+        <div ng-show="TabController.user">
         <div class="list-group">
-            <a href="" class="list-group-item" ng-click="tabController.onUser()"> {{tabController.user}}'s To Do</a>
+            <a href="" class="list-group-item" ng-click="tabController.onUser()"> {{TabController.user}}'s To Do</a>
             <a href="" class="list-group-item" ng-click="tabController.onAll()"> All</a>
         </div>
     </div>
