some visuals changes

--- a/app/home/directives/userToDo/userToDo.html
+++ b/app/home/directives/userToDo/userToDo.html
@@ -7,14 +7,14 @@
     <section>
         <input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
         
-            <li ng-repeat="toDo in tabController.toDos"  | filter:tabController.statusFilter">
-                <input data-toggle="toggle" ng-show="todo.value.user == tabController.user" type="checkbox" ng-model="toDo.value.completed" ng-change="toggleCompleted(toDo)">
+            <li ng-repeat="toDo in tabController.toDos  | filter:tabController.statusFilter">
+                <input data-toggle="toggle" ng-show="toDo.value.user == tabController.user" type="checkbox" ng-model="toDo.value.completed" ng-change="toggleCompleted(toDo)">
                 <span ng-hide="toDo.editing" ng-dblclick="tabController.editToDo(toDo)">{{todo.value.title}}</span>
                 <form ng-submit="tabController.doneEditing(todo)">
                 <input ng-show="toDo.editing" ng-model="toDo.value.title" ng-blur="tabController.stopEditing(toDo)" autofocus />
                 </form>
-                <span>{{todo.value.user}}</span>
-                <button class="destroy" ng-show="todo.value.user == tabController.user" ng-click="tabController.removeTodo(todo)">Delete it!</button>
+                <span>{{toDo.value.user}}</span>
+                <button class="btn btn-danger" ng-show="todo.value.user == tabController.user" ng-click="tabController.removeTodo(toDo)">Delete it!</button>
             </li>
         </ul>
     </section>
@@ -22,13 +22,13 @@
 <footer>
     <ul id="filters">
         <li>
-     	<a ng-click="tabController.onChangeStatus('')">All</a>
+     	<button class="btn btn-success"><a ng-click="tabController.onChangeStatus('')">All</a></button>
      	</li>
      	<li>
-     	<a ng-click="tabController.onChangeStatus('active')">Active</a>
+     	<button class="btn btn-success"><a ng-click="tabController.onChangeStatus('active')">Active</a></button>
      	</li>
      	<li>
-     	<a ng-click="tabController.onChangeStatus('completed')">Completed</a>
+     	<button class="btn btn-success"><a ng-click="tabController.onChangeStatus('completed')">Completed</a></button>
      	</li>
     </ul>
  </footer>
