--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>TODO App</title>
 </head>
 <body ng-app="app">
-
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">TODO App</a>
+            </div>
+        </div>
+    </nav>
     <ui-view></ui-view>
     
     <script type="text/javascript" src="bundle.js"></script>
