--- a/app/home/home.html
+++ b/app/home/home.html
@@ -18,7 +18,9 @@
                 </div>
             </div>
         </div>
-        <li ng-repeat="item in tabController.data" class="col-md-12">
-            <span>{{item.user}}</span>
+        <!--
+        <li ng-repeat="item in tabController.data" class="list-group col-md-12">
+            <span class="list-group-item">{{item.user}}</span>
         </li>
+        -->
 </div>
