stats for user and whole + view improvements

--- a/app/home/directives/userinput/userinput.html
+++ b/app/home/directives/userinput/userinput.html
@@ -1,7 +1,7 @@
 <div class="col-md-6 well text-center">
     <div class="input-group input-group-lg">
       <input 
-        ng-model="tabController.selectedUser" 
+        ng-model="toDoController.selectedUser" 
         type="text" 
         class="form-control text-left" 
         placeholder="User"
@@ -11,7 +11,7 @@
         <button 
           class="btn btn-success" 
           type="button" 
-          ui-sref="home({user: tabController.selectedUser})">Szukaj trufli!</button>
+          ui-sref="home({user: toDoController.selectedUser})">Szukaj trufli!</button>
       </span>
      
     </div>
