--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,15 +2,15 @@
     <user-input></user-input>
     
     <div>
-        <div ng-show="tabController.user">
+        <div ng-show="toDoController.user">
         <div class="list-group col-md-6">
-            <a href="" class="list-group-item" ng-click="tabController.onUser()"> Show results</a>
-            <a href="" class="list-group-item" ng-click="tabController.onChangeTab('user')"> {{tabController.user}}'s To Dos<span class="badge">2</span></a>
-            <a href="" class="list-group-item" ng-click="tabController.onChangeTab('all')"> All To Dos<span class="badge">12</span></a>
+            <a href="" class="list-group-item" ng-click="toDoController.onUser()"> Show results</a>
+            <a href="" class="list-group-item" ng-click="toDoController.onChangeTab('user')"> {{toDoController.user}}'s To Dos <span class="label label-warning">{{toDoController.userIncompleted}}</span> <span class="label label-success">{{toDoController.userCompleted}}</span></a>
+            <a href="" class="list-group-item" ng-click="toDoController.onChangeTab('all')"> All To Dos <span class="label label-warning">{{(toDoController.toDos | filter : { completed: false }).length}}</span> <span class="label label-success">{{(toDoController.toDos | filter : { completed: true }).length}}</span></a>
         </div>
     </div>
         
-            <div ng-switch='tabController.selectedTab'>
+            <div ng-switch='toDoController.selectedTab'>
                 <div ng-switch-when='user'>
                     <user-to-do></user-to-do>
                 </div>
@@ -20,7 +20,7 @@
             </div>
         </div>
         <!--
-        <li ng-repeat="item in tabController.data" class="list-group col-md-12">
+        <li ng-repeat="item in toDoController.data" class="list-group col-md-12">
             <span class="list-group-item">{{item.user}}</span>
         </li>
         -->
